--- a/index.html
+++ b/index.html
@@ -20,24 +20,24 @@
         <li><a href="">Contacts</a></li>
       </ul>
     </nav>
+    <address>
       <ul>
         <li> <a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
         <li> <a href="tel:+11(000)111-11-11">+11 (000) 111-11-11</a></li>
       </ul>
-   
+    </address>
     </header>
     <!--Unique page content-->
     <main>
-    <div>
-      <h2>Solutions for Your Business</h2>
+
       <section>
-        <h1>Effective Solutions <br> for Your Business
+        <h1>Effective Solutions for Your Business
            </h1>
           <button type="button">Order Service</button>
       </section>
-    </div>
-    <h2>We are doing</h2>
+    
     <section>
+      <h2>We are doing</h2>
       <ul>
         <li>
           <h3>Strategy</h3>
@@ -65,46 +65,46 @@ problem to walk away with the  perfect and creative solution.
           </p>
         </li>
       </ul>
-      <div>
+      </section>
+
+      <section>
       <h2>What are we doing</h2>
       <ul>
         <li>
-      <img src="./Images/Rectangle71.jpg" alt="monitor with picture" width="360">
+      <img src="./images/Rectangle71.jpg" alt="monitor with picture" width="360">
     </li>
     <li>
-      <img src="./Images/Rectangle71(1).jpg" alt="phones" width="360">
+      <img src="./images/Rectangle71(1).jpg" alt="phones" width="360">
     </li>
     <li>
-      <img src="./Images/Rectangle71(2).jpg" alt="hand holding phone" width="360">
+      <img src="./images/Rectangle71(2).jpg" alt="hand holding phone" width="360">
     </li> 
-    </ul>
-      </div>
+    </ul>  
     </section>
-    <div>
-      <h2>Team</h2>
+    
       <section> 
         <h2>Our Team</h2>
-        <img src="./Images/img.jpg" alt="men with beard" width="264">
+        <img src="./images/img.jpg" alt="men with beard" width="264">
         <h3>Mark Guerrero</h3>
         <p>Product Designer</p>
-        <img src="./Images/img(1).jpg" alt="guy smiling" width="264">
+        <img src="./images/img(1).jpg" alt="guy smiling" width="264">
         <h3>Tom Ford</h3>
         <p>Frontend Developer</p>
-        <img src="./Images/img(2).jpg" alt="girl in a pink jumper" width="264">
+        <img src="./images/img(2).jpg" alt="girl in a pink jumper" width="264">
         <h3>Camila Garcia</h3>
         <p>Marketing</p>
-        <img src="./Images/img(3).jpg" alt="smiling guy in a gray t-shirt" width="264">
+        <img src="./images/img(3).jpg" alt="smiling guy in a gray t-shirt" width="264">
         <h3>Daniel Wilson</h3>
         <p>UI Designer</p>
       </section>
-    </div>
+  
   </main>
     <footer>
       <a href="/">
         WEBSTUDIO
       </a>
       <p>
-        Increase the flow of customers and <br> sales for your business with digital <br> marketing & growth solutions.
+        Increase the flow of customers and  sales for your business with digital  marketing & growth solutions.
       </p>
       <!--Footer-->
     </footer>
