--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
     <!--Profile header-->
     <header>
       <nav>
-        <a href="/"> WEBSTUDIO </a>
+        <a href="./index.html"> WEBSTUDIO </a>
 
         <ul>
-          <li><a href="">Studio</a></li>
-          <li><a href="">Portfolio</a></li>
-          <li><a href="">Contacts</a></li>
+          <li><a href="./index.html">Studio</a></li>
+          <li><a href="./index.html">Portfolio</a></li>
+          <li><a href="./index.html">Contacts</a></li>
         </ul>
       </nav>
       <address>
@@ -91,26 +91,36 @@
 
       <section>
         <h2>Our Team</h2>
-        <img src="./images/img.jpg" alt="men with beard" width="264" />
-        <h3>Mark Guerrero</h3>
-        <p>Product Designer</p>
-        <img src="./images/img(1).jpg" alt="guy smiling" width="264" />
-        <h3>Tom Ford</h3>
-        <p>Frontend Developer</p>
-        <img
-          src="./images/img(2).jpg"
-          alt="girl in a pink jumper"
-          width="264"
-        />
-        <h3>Camila Garcia</h3>
-        <p>Marketing</p>
-        <img
-          src="./images/img(3).jpg"
-          alt="smiling guy in a gray t-shirt"
-          width="264"
-        />
-        <h3>Daniel Wilson</h3>
-        <p>UI Designer</p>
+        <ul>
+          <li>
+            <img src="./images/img.jpg" alt="men with beard" width="264" />
+            <h3>Mark Guerrero</h3>
+            <p>Product Designer</p>
+          </li>
+          <li>
+            <img src="./images/img(1).jpg" alt="guy smiling" width="264" />
+            <h3>Tom Ford</h3>
+            <p>Frontend Developer</p>
+          </li>
+          <li>
+            <img
+              src="./images/img(2).jpg"
+              alt="girl in a pink jumper"
+              width="264"
+            />
+            <h3>Camila Garcia</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img
+              src="./images/img(3).jpg"
+              alt="smiling guy in a gray t-shirt"
+              width="264"
+            />
+            <h3>Daniel Wilson</h3>
+            <p>UI Designer</p>
+          </li>
+        </ul>
       </section>
     </main>
     <footer>
